完成基本图形化界面